fix individual project page not responsive

--- a/app/projects/[projectId]/page.css
+++ b/app/projects/[projectId]/page.css
@@ -10,7 +10,7 @@
 
 .header-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   gap: 2rem;
 }
 
@@ -71,4 +71,10 @@
   font-weight: 300;
   font-size: 1.2rem;
   line-height: 1.7rem;
+}
+
+@media (min-width: 800px) {
+  .header-grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
